--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"start": "wp-scripts start",
 		"packages-update": "wp-scripts packages-update",
 		"js-build": "terser src/script.js -o js/script.min.js",
-		"copy": "copyfiles -f node_modules/slick-carousel/slick/slick.css node_modules/slick-carousel/slick/slick.js vendor/slick"
+		"copy": "copyfiles -f node_modules/slick-carousel/slick/slick.css node_modules/slick-carousel/slick/slick-theme.css node_modules/slick-carousel/slick/slick.js vendor/slick"
 	},
 	"devDependencies": {
 		"@wordpress/scripts": "^28.5.0"
@@ -22,6 +22,7 @@
 	"dependencies": {
 		"copyfiles": "^2.4.1",
 		"slick-carousel": "^1.8.1",
+		"swiper": "^11.1.9",
 		"terser": "^5.31.4"
 	}
 }
