Swiper integration updates.

--- a/package.json
+++ b/package.json
@@ -6,23 +6,20 @@
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
-		"build": "wp-scripts build",
+		"build": "wp-scripts build src/view.js src/index.js --output-path=build",
 		"build-blocks": "wp-scripts build --webpack-src-dir=blocks-src --output-path=blocks",
 		"format:js": "wp-scripts format-js",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
 		"start": "wp-scripts start",
 		"packages-update": "wp-scripts packages-update",
-		"js-build": "terser src/script.js -o js/script.min.js",
 		"copy": "copyfiles -f node_modules/slick-carousel/slick/slick.css node_modules/slick-carousel/slick/slick-theme.css node_modules/slick-carousel/slick/slick.js vendor/slick"
 	},
 	"devDependencies": {
 		"@wordpress/scripts": "^28.5.0"
 	},
 	"dependencies": {
-		"copyfiles": "^2.4.1",
 		"slick-carousel": "^1.8.1",
-		"swiper": "^11.1.9",
-		"terser": "^5.31.4"
+		"swiper": "^11.1.9"
 	}
 }
