--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
-		"build": "wp-scripts build src/view.js src/index.js --output-path=build",
-		"build-blocks": "wp-scripts build --webpack-src-dir=blocks-src --output-path=blocks",
+		"build": "wp-scripts build src/view.js src/index.js --output-path=build && wp-scripts build --webpack-src-dir=blocks-src --output-path=blocks",
 		"format:js": "wp-scripts format-js",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
